Fixing contact spacing for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ i{
     }
 
     #contactContainer{
-        margin-top: 100%;
+        margin-top: 300%;
         margin-bottom: -1px;
     }
 
